--- a/mvp/public/index.html
+++ b/mvp/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-Ky1+BLwOzwyvOj8jFdOWHaG2Ks/gZyrW+7+i9ZxCGU2Ukh6k9f8doj5O+NLZawB2" crossorigin="anonymous">
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
